Kong-Api-Gateway-Research/Kong-Keycloak-OIDC-Architecture/apps/2-payments/0-gatewayclass-payments.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: payments-kong-gatewayclass
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
spec:
  controllerName: konghq.com/payments-kong-gateway-controller
