Kong-Api-Gateway-Research/Kong-Keycloak-OIDC-Architecture/apps/2-payments/3-transfer.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: payments-ns
  name: payments-ns
---
apiVersion: v1
kind: Service
metadata:
  name: transfer-svc
  namespace: payments-ns
spec:
  selector:
    app: transfer-svc
  ports:
    - port: 8084
      targetPort: 9094
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-svc
  namespace: payments-ns
  labels:
    app: transfer-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transfer-svc
  template:
    metadata:
      labels:
        app: transfer-svc
    spec:
      containers:
        - name: transfer-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9094
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
