Kong-Api-Gateway-Research/Kong-Keycloak-OIDC-Architecture/apps/2-payments/4-payment-gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: payment-gateway-svc
  namespace: payments-ns
spec:
  selector:
    app: payment-gateway-svc
  ports:
    - port: 8085
      targetPort: 9095
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-gateway-svc
  namespace: payments-ns
  labels:
    app: payment-gateway-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-gateway-svc
  template:
    metadata:
      labels:
        app: payment-gateway-svc
    spec:
      containers:
        - name: payment-gateway-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9095
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
