Kong-Api-Gateway-Research/Kong-Keycloak-OIDC-Architecture/apps/2-payments/5-fx.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fx-svc
  namespace: payments-ns
spec:
  selector:
    app: fx-svc
  ports:
    - port: 8086
      targetPort: 9096
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fx-svc
  namespace: payments-ns
  labels:
    app: fx-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fx-svc
  template:
    metadata:
      labels:
        app: fx-svc
    spec:
      containers:
        - name: fx-svc
          image: nicholasjackson/fake-service:v0.26.2
          ports:
            - containerPort: 9096
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
